--- a/index.html
+++ b/index.html
@@ -1,1 +1,56 @@
-"Hell Oh World" 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="device=device-width, initial-scale=1.0">
+  <title>Daniel Cole | Resume</title>
+  <!--font files and other links go ahead of stylesheet-->
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Righteous" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+
+<body>
+  <header>
+    <h1>Daniel Cole</h1>
+    <h2 class="black">Software & Web Developer</h2>
+  </header>
+  <main>
+
+    <div class="wrapperCol">
+      <section class="skills">
+        <h2>Skills and Technologies</h2>
+        <h3>PROGRAMMING LANGUAGES</h3>
+        <ul>
+          <li>Java, C++, C#, Javascript, HTML, CSS</li>
+        </ul>
+        <h3>DATABASES</h3>
+        <ul>
+          <li>Oracle, SQL Server</li>
+        </ul>
+        <h3>FRAMEWORK AND OTHER NOTABLES</h3>
+        <ul>
+          <li>Experienced with: <span>.NET, ASP.NET, ADO.NET, Bootstrap, Wordpress</span></li>
+        </ul>
+      </section>
+      <section class="projects">
+        <h2>Projects</h2>
+        <h3>Give Back Memphis</h3>
+        <p>Currently, I'm designing a website for Give Back Memphis, a local nonprofit consulting service.
+          The site is nearing its launch, so check them out soon. 
+        </p>
+        <div class="GBM">
+            <img class="img" src="GBM_Landing.JPG" alt="First image of GBM Website">
+        </div>
+
+      </section>
+    </div>
+  </main>
+  <footer>
+    <h3 id="contact">Contact Me</h3>
+    <a href="dancole@zoho.com" rel="Email">dancole@zoho.com</a>
+    <br /><br /><small>
+          <p>Copyright Daniel Cole 2017</p>
+      </small>
+  </footer>
+</body>
