--- a/index.html
+++ b/index.html
@@ -5,24 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="device=device-width, initial-scale=1.0">
   <title>Daniel Cole | Resume</title>
-  <!--font files and other links go ahead of stylesheet-->
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif|Righteous" rel="stylesheet">
-  <link rel="stylesheet" href="stylesheet.css">
-</head>
-
+  </head>
 <body>
-  <div class="container">
-    <div class="item">1</div>
-    <div class="item">2</div>
-    <div class="item">3</div>
-    <div class="item">4</div>
-    <div class="item">5</div>
-    <div class="item">6</div>
-    <div class="item">7</div>
-    <div class="item">8</div>
-    <div class="item">9</div>
-    <div class="item">10</div>
-  </div>
-
-</body>
+    <h1">Hi</h1>
+      <p>
+        My name is Daniel, and I'm a software developer with a wide range of interests.
+        I've worked on websites, podcasts and Windows apps, but I'm currently focused on learning web development.
+        More broadly, design is a preoccupation of mine, and I'm always interested in exploring how
+        people think about and interact with technology.
+      </p>
+   <h2>Things I've worked on...</h2>
+   <section>
+     <h3>Give Back Memphis (web development)</h3>
+     <p>
+       Give Back Memphis is a Memphis nonprofit organization dedicated to providing other local nonprofits with experienced,
+       pro bono consultants. They needed a web presence that could communicate their vision and process, but one that was also
+       in keeping with their local scale and spirit. To that end, I built them a custom Wordpress site with just
+       the right fit. The majority of my work involved UX, design,
+       <!-- img1  Discuss site?-->
+       <!-- img2 -->
+     </p>
+   </section>
+    <section>
+      <h3>WordFeast (.NET Windows App)</h3>
+    </section>
 </html>
