Caption error removal

--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
             You can check out my progress in these short videos, or take a look on
             <a href="https://github.com/dandc11/BookDbApp" rel="github page">github</a>.
           </p>
-          <caption>Back-end</caption>
           <iframe width="280" height="145" src="https://www.youtube-nocookie.com/embed/qpsXletbBU8?rel=0" frameborder="0" allow="autoplay; encrypted-media"
-            allowfullscreen></iframe>
-          <caption>Front-end</caption>
+            allowfullscreen>Front-end</iframe>
           <iframe width="280" height="145" src="https://www.youtube.com/embed/1hk37XXtC_4" frameborder="0" allow="autoplay; encrypted-media"
             allowfullscreen></iframe>
   
