--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1>Hi...</h1>
     </div>
     <p>
-      I'm Daniel, a junior software developer with an abiding interest in design and user experience. My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++. I'm If you like,
+      I'm Daniel, a junior software developer with an abiding interest in design and user experience. My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++. If you like,
       you can grab my
       <a href="/Daniel Cole Resume.docx" download>resume</a>
       or get in touch at dancole@zoho.com.
