--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <h2>Give Back Memphis</h2>
       </section>
       <div class="modal-body">
-        <p>This nonprofit needed a web presence that could communicate their mission, but one that was also concise and in keeping
+        <p>This nonprofit needed a <a href="http://www.givebackmemphis.org" alt="Give Back Memphis Website">web presence</a> that could communicate their mission, but one that was also concise and in keeping
           with their local focus. Through a few iterations of design and feedback, I found something with the right touch,
           then got them up and running with a custom Wordpress site.
         </p>
