--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
       I'm Daniel, a junior software developer with an abiding interest in design and user experience. My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++. If you like,
       you can grab my
-      <a href="/Daniel Cole Resume.docx" download>resume</a>
+      <a href="Daniel Cole Resume.docx" download>resume</a>
       or get in touch at dancole@zoho.com.
     </p>
     <h2>A few things I've worked on...</h2>
