--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="Daniel Cole Resume.docx" download>resume</a>
       , take a look at my 
        <a href="https://github.com/dandc11">
-          <img src="smiley.gif" alt="My github">
+          <img src="GitHub-Mark-32px.png" alt="My github">
        </a> 
       or get in touch at dancole@zoho.com.
     </p>
