--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
        </a>, or  
       <a href="https://codepen.io/btcaver/#">
           <img src="codepen.png" class="codepen" coalt="My codepen">
-       </a>,
-      or get in touch at dancole@zoho.com.
+       </a>
+      , or get in touch at dancole@zoho.com.
     </p>
     <h2>A few things I've worked on...</h2>
   </div>
