--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
       I'm Daniel, a junior software developer with an abiding interest in design and user experience. 
       My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++.
-      <br><br>If you like,
+      </br></br>If you like,
       you can grab my
       <a href="Daniel Cole Resume.docx" download>resume</a>
       , take a look at  
