--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
       I'm Daniel, a junior software developer with an abiding interest in design and user experience. 
       My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++.</p>
       </br></br>
-  <p>If you like,
-      you can grab my
-      <a href="Daniel Cole Resume.docx" download>resume</a>
-      , take a look at  
+  <p>For more, take a look at  
        <a href="https://github.com/dandc11">
           <img src="GitHub-Mark-32px.png" alt="My github">
        </a>, or  
