--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h1>Hi...</h1>
     </div>
     <p>
-      I'm Daniel, a junior software developer with an abiding interest in design and user experience. 
-      My primary focus is front-end web development; however, I've also studied back-end languages such as C#, Java and C++.</p>
+      I'm Daniel, a software developer with an abiding interest in design and user experience. 
+      My primary focus is JavaScript-based front-end web development, but on occasion I've worked in Java, Swift and Node.js.</p>
       </br></br>
   <p>For more, take a look at  
        <a href="https://github.com/dandc11">
